[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/objects/GameScene.gd" type="Script" id=2]

[node name="GameScene" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_right = 128.0
margin_bottom = 256.0
color = Color( 0.137255, 0.145098, 0.305882, 1 )

[node name="Gems" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="FallTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="movement_ended" from="Player" to="." method="_on_Player_movement_ended"]
[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
